<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignIn"
    tools:showIn="@layout/activity_sign_in">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reg_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dip"
            android:text="@string/reg_note"
            android:textColor="#FF0000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/id_name" />

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/id_name"
            android:paddingLeft="5dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/id_passwd" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/id_passwd"
            android:inputType="textPassword"
            android:paddingLeft="5dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/reg_confirm" />

        <EditText
            android:id="@+id/reg_confirm"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/reg_confirm"
            android:inputType="textPassword"
            android:paddingLeft="5dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/reg_tureName" />

        <EditText
            android:id="@+id/reg_trueName"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:hint="@string/reg_confirm"
            android:paddingLeft="5dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/reg_age" />

        <EditText
            android:id="@+id/reg_age"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:hint="@string/reg_hint_age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="8dip"
            android:text="@string/reg_sex" />

        <RadioGroup
            android:id="@+id/radgActButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radbtnRadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="男" />

            <RadioButton
                android:id="@+id/radbtnRadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="女" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="爱              好:" />

        <CheckBox
            android:id="@+id/gym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="体育" />

        <CheckBox
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="音乐" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip" />

        <CheckBox
            android:id="@+id/tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="旅游" />

        <CheckBox
            android:id="@+id/read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="阅读" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reg_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin" />

        <Button
            android:id="@+id/reg_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReg" />
    </LinearLayout>


</LinearLayout>
