<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SlectMenuRelative"
    tools:showIn="@layout/activity_slect_menu_relative">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="40dp"
        android:textColor="#AA000000"
        />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_name"
        android:layout_gravity="center_vertical"
        android:layout_toStartOf="@id/etUser"
        android:layout_alignTop="@id/etUser"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_passwd"
        android:layout_gravity="center_horizontal"
        android:layout_toStartOf="@id/etPwd"
        android:layout_alignTop="@id/etPwd"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_below="@id/etUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />


    <CheckBox
        android:id="@+id/cbRemember"
        android:text="记住我"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:checked="false"
        android:layout_below="@id/etPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/btnLogin"
        style="@style/AppTheme"
        android:minWidth="70dip"
        android:background="#882266AA"
        android:layout_below="@id/cbRemember"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnReg"
        android:text="@string/btnReg"
        style="@style/AppTheme"
        android:minWidth="70dip"
        android:background="#882266AA"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>