<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginWindow"
    tools:showIn="@layout/activity_login_window">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView0"
        android:gravity="center"
        android:paddingBottom="20dip"
        android:paddingTop="20dip"
        android:text="@string/sign_in"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25px"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_name"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/etUser"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_passwd"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/etPwd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <CheckBox
            android:id="@+id/cbRemember"
            android:text="记住我"
            android:textColor="#AAAAAA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false"
            />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dip"
        android:paddingBottom="20dip"
        android:paddingRight="20dip"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/btnLogin"
            style="@style/AppTheme"
            android:minWidth="70dip"
            android:background="#882266AA"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReg"
            android:text="@string/btnReg"
            style="@style/AppTheme"
            android:minWidth="70dip"
            android:background="#882266AA"
            />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>