<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Main2Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:tooltipText="@string/app_name"
            app:popupTheme="@style/AppTheme.PopupOverlay" />



    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:stretchColumns="0"
        android:collapseColumns="*"
        android:shrinkColumns="1,2"
        android:layout_marginTop="80dp"
        >

        <TableRow>
            <TextView
                android:layout_span="6"
                android:textSize="30dip"
                android:text="登陆界面"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="账号："
                android:textSize="15dip"
                android:gravity="right"
                android:layout_column="0" />
            <EditText

                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="密码："
                android:gravity="right"
                android:textSize="15dip"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_column="1"
                android:inputType="textPassword"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <CheckBox
                android:checked="false"
                android:layout_column="1"
                android:text="记住我"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:background="#99EEFFFF"
                android:text="@string/btnLogin"
                android:visibility="visible" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnReg"
                android:layout_column="2"
                android:background="#99EEFFFF"/>


        </TableRow>



    </TableLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>